--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,47 @@ img.photo_main{
     height: 500px;
     margin-left: 150px;
 }
+p.head{
+    font-family: "Kanit", sans-serif;
+    font-size: 40px;
+    font-style: normal;
+}
+img.mer{
+    width: 320px;
+}
+div.mer{
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+}
+p.mer_main{
+    font-family: "Kanit", sans-serif;
+    font-size: 22px;
+    font-style: normal;
+}
+p.mer{
+    font-family: "Kanit", sans-serif;
+    font-size: 20px;
+    font-style: normal;
+}
+a.mer{
+    text-decoration: none;
+    color:#FF4500;
+    font-family: "Kanit", sans-serif;
+    font-size: 20px;
+    font-style: normal;
+}
+div.photo{
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+}
+img.photo{
+    height: 350px;
+}
+
+
+
 footer{
     display: flex;
 }
