--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,24 @@
 body{
     background-color: white;
     width: 1440px;
+    margin: 0; 
+    padding: 0;
+    width: 100%;
 }
 header{
     display: flex;
-    justify-content: flex-start;
-    width: 1440px;
+    flex-direction: column; 
+    align-items: center;
+    width: 100%;
     position: relative;
+    padding: 20px 0;
+}
+div.div_logo
+{
+    display: flex;
+    justify-content: center; 
+    width: 100%;
+    padding: 10px 0;
 }
 ul.oneh{
     display: flex;
@@ -25,8 +37,6 @@ ul.twoh{
     margin-left: 200px;
 }
 img.logo{
-    margin-top: 25px;
-    padding-left: 200px;
     height: 74px;
 }
 
@@ -192,4 +202,40 @@ button.mes{
 }
 img.znak_info{
     margin-top: 20px;
+}
+
+nav a.active {
+    font-weight: bold;
+    color: #f00;
+}
+nav {
+    width: 100%; 
+}
+.menu-list {
+    display: flex;
+    justify-content: center; 
+    gap: 40px; 
+    list-style: none; 
+    padding: 0;
+    margin: 0;
+}
+
+.menu-list li a {
+    text-decoration: none;
+    font-family: "Kanit", sans-serif;
+    color: black;
+    font-size: 20px;
+    font-style: normal;
+    padding: 10px 15px; 
+    transition: color 0.3s; 
+}
+
+.menu-list li a:hover {
+    color: #FF4500; 
+}
+
+.menu-list li a.active {
+    font-weight: bold;
+    color: #FF4500;
+    border-bottom: 2px solid #FF4500;
 }
