--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,6 +247,16 @@ nav {
     font-family: 'Kanit', sans-serif;
 }
 
+
+.article-form-container {
+    width: 50%;
+    max-width: 400px;
+    margin: 30px auto;
+    padding: 30px;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
 .form-group {
     margin-bottom: 20px;
 }
